--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git@work.github.com:arosenkranz/googlebooks-app.git"
+        "url": ""
     },
     "keywords": [],
     "author": "",
