--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "dependencies": {
         "apollo-server-express": "^3.6.2",
         "bcrypt": "^5.0.0",
-        "express": "^4.17.2",
-        "graphql": "^16.3.0",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "graphql": "^16.6.0",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^5.9.10"
+        "mongoose": "^5.9.10",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.3"
+        "nodemon": "^2.0.21"
     }
 }
