debugging routes, server and connection

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "graphql": "^16.6.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^5.9.10",
+        "path": "^0.12.7",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
