--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,17 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "jwt-decode": "3.1.2",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
