--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "concurrently": "^7.6.0",
     "jwt-decode": "3.1.2",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
