--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-stripe-checkout": "^2.6.3",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
