--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,11 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^5.9.10",
         "path": "^0.12.7",
+        "save": "^2.9.0",
+        "stripe": "^11.16.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.21"
+        "nodemon": "^2.0.22"
     }
 }
