debugging package.json

--- a/package.json
+++ b/package.json
@@ -21,16 +21,14 @@
         "@apollo/react-hooks": "^4.0.0",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.5.0",
-        "@fontsource/roboto": "^4.5.9",
+        "@fontsource/roboto": "^4.5.8",
         "@mui/icons-material": "^5.2.5",
         "@mui/material": "^5.2.5",
         "@mui/styled-engine-sc": "^5.2.5",
         "apollo-server-express": "^2.19.2",
         "if-env": "^1.0.4",
         "react-router-dom": "^6.2.1",
-        "styled-components": "^5.3.3"
-    },
-    "devDependencies": {
+        "styled-components": "^5.3.3",
         "concurrently": "^5.2.0"
     }
 }
