--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "travel-buddy",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "homepage": "./travel-buddy",
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,6 +16,7 @@
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
     "jwt-decode": "3.1.2",
+    "mongoose": "^7.0.3",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
