--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "graphql": "^16.6.0",
+        "http-proxy-middleware": "^2.0.6",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^5.9.10",
         "path": "^0.12.7",
